grammar-notes.txt
#    op          = 1*ALPHA
#    arg         = *(reserved / unreserved / pct-encoded)
#    var         = varname [ '=' vardefault ]
#    vars        = var [ *("," var) ]
#    varname     = (ALPHA / DIGIT)*(ALPHA / DIGIT / "." / "_" / "-" )
#    vardefault  = *(unreserved / pct-encoded)
#    operator    = "-" op "|" arg "|" vars
#    expansion   = "{" ( var / operator ) "}"

  rule s        # Optional space
    S?
  end

  rule white
    [ \t\n\r]+
  end

  rule non_space_char
    ![ \n] .
  end

  # Any but not variable boundaries
  rule any
        .
  end

  rule whitespace
    [\s]*
  end

#  rule variable
#    [a-z]+ {
#      def eval(env={})
#        env[name]
#      end
#      
#      def name
#        text_value
#      end
#    }
#  end
